# Caelum

./: .gitignore  BATTERY_CONFIGURATION.md  BUILD_FIX_ESP_TIMER.md  CMakeLists.txt  DEEP_SLEEP_IMPLEMENTATION.md  DEPRECATED_API_FIX.md  FILE_REORGANIZATION.md  LED_DEBUG_FEATURE.md  PROJECT_CREATION.md  README.md  caelum-weather-station.js  sdkconfig  sdkconfig.defaults  sdkconfig.old  wind_vane_macro.py
PCB/caelum/: caelum.kicad_pcb  caelum.kicad_pro  caelum.kicad_sch
PCB/caelum_v2/: ESP32H2-Supermini.kicad_sym  caelum_v2.kicad_pcb  caelum_v2.kicad_prl  caelum_v2.kicad_pro  caelum_v2.kicad_sch  fp-lib-table  sym-lib-table
PCB/caelum_v2/Gerber/: caelum_v2-B_Cu.gbl  caelum_v2-B_Mask.gbs  caelum_v2-B_Paste.gbp  caelum_v2-B_Silkscreen.gbo  caelum_v2-Edge_Cuts.gm1  caelum_v2-F_Cu.gtl  caelum_v2-F_Mask.gts  caelum_v2-F_Paste.gtp  caelum_v2-F_Silkscreen.gto  caelum_v2-NPTH.drl  caelum_v2-PTH.drl
main/: CMakeLists.txt  anemometer.c  anemometer.h  as5600.c  as5600.h  battery_monitor.c  battery_monitor.h  bme280_app.c  bme280_app.h  dps368.c  dps368.h  esp_zb_ota.c  esp_zb_ota.h  esp_zb_weather.c  esp_zb_weather.h  i2c_config.c  i2c_config.h  lps22hb.c  lps22hb.h  sensor_if.c  sensor_if.h  sht41.c  sht41.h  sleep_manager.c  sleep_manager.h  veml7700.c  veml7700.h  weather_driver.c
